# menuconfig

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  README.md  config.h  configure  configure.ac
src/: Makefile.am  confdata.c  platform.h  symbol.c  util.c
tests/: Makefile.am  conftest.py  test.sh
