SUBDIRS = src tests
EXTRA_DIST = \
    src/config.h \
    src/expr.h \
    src/list.h \
    src/lkc.h \
    src/lkc_proto.h \
    src/zconf.l \
    src/zconf.y \
    src/lxdialog/dialog.h \
    src/conf.c src/expr.c \
    src/kconf_id.c \
    src/menu.c \
    src/symbol.c \
    src/confdata.c \
    src/images.c \
    src/mconf.c \
    src/preprocess.c \
    src/util.c \
    src/platform.h
CLEANFILES = src/zconf.lex.c